// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render a controlled Toggle that is off by state 1`] = `
<span>
  <input
    checked={false}
    className="nice-toggle primary"
    defaultChecked={null}
    disabled={false}
    id="myToggle"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn small"
    htmlFor="myToggle"
    style={Object {}}
  >
    Label
  </label>
</span>
`;

exports[`<Toggle /> should render a disabled Toggle 1`] = `
<span>
  <input
    checked={null}
    className="nice-toggle"
    defaultChecked={false}
    disabled={true}
    id="myToggle"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="myToggle"
    style={Object {}}
  >
    Disabled toggle
  </label>
</span>
`;

exports[`<Toggle /> should render a simple Toggle 1`] = `
<span>
  <input
    checked={null}
    className="nice-toggle"
    defaultChecked={false}
    disabled={false}
    id="myToggle"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="myToggle"
    style={Object {}}
  >
    Label
  </label>
</span>
`;

exports[`<Toggle /> should render a small primary Toggle that is on by default 1`] = `
<span>
  <input
    checked={null}
    className="nice-toggle primary"
    defaultChecked={true}
    disabled={false}
    id="myToggle"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn small"
    htmlFor="myToggle"
    style={Object {}}
  >
    Label
  </label>
</span>
`;

exports[`<Toggle /> should render a toggle with custom class / style + muted label when switched off 1`] = `
<span>
  <input
    checked={null}
    className="nice-toggle"
    defaultChecked={false}
    disabled={false}
    id="myToggle"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn off-muted custom-class"
    htmlFor="myToggle"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    Muted label
  </label>
</span>
`;
